[tool.poetry]
name = "eva-doc-builder"
version = "0.1.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
pyyaml = "^5.3.1"
imageio = "^2.8.0"
markdown = "^3.2.1"
markdown-table = "^2019.4.13"
mkdocs = "^1.1.2"
mkdocs-material = "^5.2.2"
mkdocs-minify-plugin = "^0.3.0"
selenium = "^3.141.0"
mkdocs-awesome-pages-plugin = "^2.2.1"
click = "^7.1.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
ipdb = "^0.13.2"
flake8 = "^3.8.3"

[tool.poetry.scripts]
eva-docs = 'eva_doc_builder.__main__:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
